# sound

./: ideas.txt
Pd/: LFO-1.pd  flanger-jan.pd
biquad_filter/: Cargo.toml
biquad_filter/src/: main.rs
convolve/: Cargo.toml
convolve/src/: main.rs
cueplayer/: Cargo.toml
cueplayer/src/: main.rs
fft/fft_cpp/: fft  fft.cpp
fft/fftpy/: fft.py
